; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_set_int_item.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_set_int_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ECPG_VAR_NOT_NUMERIC = common dso_local global i32 0, align 4
@ECPG_SQLSTATE_RESTRICTED_DATA_TYPE_ATTRIBUTE_VIOLATION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i8*, i32)* @set_int_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_int_item(i32 %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %69 [
    i32 132, label %11
    i32 135, label %17
    i32 134, label %22
    i32 128, label %28
    i32 131, label %34
    i32 130, label %39
    i32 133, label %45
    i32 129, label %51
    i32 136, label %57
    i32 137, label %63
  ]

11:                                               ; preds = %4
  %12 = load i8*, i8** %8, align 8
  %13 = bitcast i8* %12 to i16*
  %14 = load i16, i16* %13, align 2
  %15 = sext i16 %14 to i32
  %16 = load i32*, i32** %7, align 8
  store i32 %15, i32* %16, align 4
  br label %74

17:                                               ; preds = %4
  %18 = load i8*, i8** %8, align 8
  %19 = bitcast i8* %18 to i32*
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %7, align 8
  store i32 %20, i32* %21, align 4
  br label %74

22:                                               ; preds = %4
  %23 = load i8*, i8** %8, align 8
  %24 = bitcast i8* %23 to i64*
  %25 = load i64, i64* %24, align 8
  %26 = trunc i64 %25 to i32
  %27 = load i32*, i32** %7, align 8
  store i32 %26, i32* %27, align 4
  br label %74

28:                                               ; preds = %4
  %29 = load i8*, i8** %8, align 8
  %30 = bitcast i8* %29 to i16*
  %31 = load i16, i16* %30, align 2
  %32 = zext i16 %31 to i32
  %33 = load i32*, i32** %7, align 8
  store i32 %32, i32* %33, align 4
  br label %74

34:                                               ; preds = %4
  %35 = load i8*, i8** %8, align 8
  %36 = bitcast i8* %35 to i32*
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %7, align 8
  store i32 %37, i32* %38, align 4
  br label %74

39:                                               ; preds = %4
  %40 = load i8*, i8** %8, align 8
  %41 = bitcast i8* %40 to i64*
  %42 = load i64, i64* %41, align 8
  %43 = trunc i64 %42 to i32
  %44 = load i32*, i32** %7, align 8
  store i32 %43, i32* %44, align 4
  br label %74

45:                                               ; preds = %4
  %46 = load i8*, i8** %8, align 8
  %47 = bitcast i8* %46 to i64*
  %48 = load i64, i64* %47, align 8
  %49 = trunc i64 %48 to i32
  %50 = load i32*, i32** %7, align 8
  store i32 %49, i32* %50, align 4
  br label %74

51:                                               ; preds = %4
  %52 = load i8*, i8** %8, align 8
  %53 = bitcast i8* %52 to i64*
  %54 = load i64, i64* %53, align 8
  %55 = trunc i64 %54 to i32
  %56 = load i32*, i32** %7, align 8
  store i32 %55, i32* %56, align 4
  br label %74

57:                                               ; preds = %4
  %58 = load i8*, i8** %8, align 8
  %59 = bitcast i8* %58 to float*
  %60 = load float, float* %59, align 4
  %61 = fptosi float %60 to i32
  %62 = load i32*, i32** %7, align 8
  store i32 %61, i32* %62, align 4
  br label %74

63:                                               ; preds = %4
  %64 = load i8*, i8** %8, align 8
  %65 = bitcast i8* %64 to double*
  %66 = load double, double* %65, align 8
  %67 = fptosi double %66 to i32
  %68 = load i32*, i32** %7, align 8
  store i32 %67, i32* %68, align 4
  br label %74

69:                                               ; preds = %4
  %70 = load i32, i32* %6, align 4
  %71 = load i32, i32* @ECPG_VAR_NOT_NUMERIC, align 4
  %72 = load i32, i32* @ECPG_SQLSTATE_RESTRICTED_DATA_TYPE_ATTRIBUTE_VIOLATION, align 4
  %73 = call i32 @ecpg_raise(i32 %70, i32 %71, i32 %72, i32* null)
  store i32 0, i32* %5, align 4
  br label %75

74:                                               ; preds = %63, %57, %51, %45, %39, %34, %28, %22, %17, %11
  store i32 1, i32* %5, align 4
  br label %75

75:                                               ; preds = %74, %69
  %76 = load i32, i32* %5, align 4
  ret i32 %76
}

declare dso_local i32 @ecpg_raise(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
